--- a/Rondiyah/accessories.html
+++ b/Rondiyah/accessories.html
@@ -20,9 +20,9 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="usedphone.html">Used Phone</a> </li>
                 <li><a href="newphone.html">New Phone</a></li>
-                <li><a href="Accessories.html">Accessories</a></li>
-                 <li><a href="">Top Up</a></li>
-			     <li><a href="">Contact Us</a></li>
+                <li><a href="Accessories.html" class="main">Accessories</a></li>
+                 <li><a href="topup.html">Top Up</a></li>
+			     <li><a href="contactus.html">Contact Us</a></li>
     </ul>
     </nav>
 
