--- a/Rondiyah/index.html
+++ b/Rondiyah/index.html
@@ -17,18 +17,18 @@
 </header>
 <nav>
 			<ul id="navigation">
-				<li><a href="">Home</a></li>
+				<li><a href="index.html"  class="main">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="usedphone.html">Used Phone</a> </li>
                 <li><a href="newphone.html">New Phone</a></li>
                 <li><a href="accessories.html">Accessories</a></li>
-                <li><a href="">Top-up</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="topup.html">Topup</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
 			</ul>
 </nav> 
 <article>
 <section id="col1">
-<h2><u>Services</u></h2>
+<h2>Services</h2>
 <img src="image/banner/breakphone.png" width="250" height="140">
      <p>
          Anda perlu cepat perbaikan smartphone? teknisi kami sudah terlatih untuk memperbaiki semua jenis smartphone seperti:
@@ -42,7 +42,7 @@
     </ul>
 </section>
 <section id="col2">
-<h2><u>Jual Beli</u></h2>
+<h2>Jual Beli</h2>
     <img src="image/banner/smartphones2.png" width="250" height="140">
     <p>
         Butuh mobile phone dengan harga murah ,bagus sesuai dengan keinginan?DD Mobile Services juga melayani jual beli mobile phone Baru/bekas berbagai merk hp dengan harga yang sangat memuaskan.
@@ -51,7 +51,7 @@
 </section>
 </article>
 <aside>
-<h2><u>Display HP</u></h2>
+<h2>Display HP</h2>
    <fiture>
        <img src="image/Displayphone/oppo.cms" width="100" height="100">
     </fiture>
