--- a/Rondiyah/newphone.html
+++ b/Rondiyah/newphone.html
@@ -19,10 +19,10 @@
 				<li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="usedphone.html">Used Phone</a> </li>
-                <li><a href="newphone.html">New Phone</a></li>
+                <li><a href="newphone.html" class="main">New Phone</a></li>
                 <li><a href="accessories.html">Accessories</a></li>
-                <li><a href="">Top Up</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="topup.html">Top Up</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
 			</ul>
 </nav> 
 <article>
