--- a/Rondiyah/services.html
+++ b/Rondiyah/services.html
@@ -17,7 +17,7 @@
 <nav>
 			<ul id="navigation">
 				<li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html" class="main">Services</a></li>
                 <li><a href="usedphone.html">Used Phone</a> </li>
                 <li><a href="newphone.html">New Phone</a></li>
                 <li><a href="accessories.html">Accessories</a></li>
