--- a/Jamilah/Tentang.html
+++ b/Jamilah/Tentang.html
@@ -49,8 +49,8 @@
                     <td id="td-body-content">
                         <div class="div-content-title"><br>Meela Tailor<br></div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
-                            Selamat datang di jasa menjahit baju meela tailor.
-                            Kami memberikan pelayanan kepada sahabat dengan pengalaman kami lebih dari 5 tahun,ini salah satu contoh hasil karya kami
+                            Jasa menjahit baju meela tailor 
+                            sudah  berpengalaman lebih dari 5 tahun,ini salah satu contoh hasil jahitan kami
                         </div>
                         <br>
                         <hr>
@@ -62,7 +62,6 @@
                         <hr>
                         <div class="div-content-title">Jasa Menjahit Baju</div>
                         <div class="div-content-brief">
-                            Selamat datang di meela tailor,kami menerima jasa menjahit baju wanita dan anak-anak bisa dalam jumlah banyak dan satuan
                             Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing<br>
                             <ol>
                             <li>seragam sekolah Rp.100.000,</li>
