--- a/Jamilah/Meela Tailor.html
+++ b/Jamilah/Meela Tailor.html
@@ -49,8 +49,8 @@
                     <td id="td-body-content">
                         <div class="div-content-title"><br>Meela Tailor<br></div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
-                            Selamat datang di jasa menjahit baju meela tailor.
-                            Kami memberikan pelayanan kepada sahabat dengan pengalaman kami lebih dari 5 tahun,ini salah satu contoh hasil karya kami
+                            Jasa menjahit baju meela tailor.
+                            sudah berpengalaman lebih dari 5 tahun,ini salah satu contoh hasil karya kami
                         </div>
                         <br>
                         <hr>
