--- a/Jamilah/index.html
+++ b/Jamilah/index.html
@@ -50,7 +50,7 @@
                         <div class="div-content-title">contoh menjahit baju kurung/muslim</div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
                             Selamat datang di jasa menjahit baju meela tailor.
-                            Kami memberikan kepuasan pelayanan dengan sentuhan harga manis model dinamis
+                            Kami memberikan pelayanan dengan harga manis model dinamis
                             <br>
                             ini salah satu contoh membuat baju kurung/muslim yang simlple
                             <br>
@@ -66,14 +66,12 @@
                         <hr>
                         <div class="div-content-title">Jasa Menjahit Baju</div>
                         <div class="div-content-brief">
-                            Selamat datang di meela tailor,kami menerima jasa menjahit baju wanita dan anak-anak bisa dalam jumlah banyak dan satuan<br>
                              Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing <br>
                             <ol>
                             <li>baju gamis Rp.100.000,.</li>
                             <li>seragam sekolah Rp.100.000,</li>
                             <li>kebaya Rp.100.000,.</li>
                             <li>baju kurung/syar'i Rp.100.000,.</li></ol>
-                            <br><br>
                             Kami juga melayani free pengiriman satu Kecamatan
                             ,salam santun Meela Tailor
                             Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
