--- a/Rondiyah/services.html
+++ b/Rondiyah/services.html
@@ -10,32 +10,32 @@
 <header>
 <h1>DD Mobile Services&copy</h1>
 		<form action="" method="GET">
-		<label for="search">Search : </label>
-			<input type="search" name="query" id="search" placeholder="Search" autofocus>
+		<label for="search">Cari : </label>
+			<input type="search" name="query" id="search" placeholder="Cari" autofocus>
 		</form>
 </header>
 <nav>
 			<ul id="navigation">
 				<li><a href="index.html">Home</a></li>
-                <li><a href="services.html" class="main">Services</a></li>
-                <li><a href="usedphone.html">Used Phone</a> </li>
-                <li><a href="newphone.html">New Phone</a></li>
-                <li><a href="accessories.html">Accessories</a></li>
-                <li><a href="">Top Up</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="services.html" class="main">Pelayanan</a></li>
+                <li><a href="usedphone.html">Hp Bekas</a> </li>
+                <li><a href="newphone.html">Hp Baru</a></li>
+                <li><a href="accessories.html">Aksesoris</a></li>
+                <li><a href="">Isi Ulang</a></li>
+                <li><a href="">Kontak Kami</a></li>
 			</ul>
 </nav> 
 <article>
-<h1>pelayanan dan perbaikan smartphone</h1>
+<h1>Pelayanan dan perbaikan smartphone</h1>
     <div id="pic">
-    <img src="image/banner/breakphone.png" width="400" height="300">
+    <img src="image/banner/breakphone.png" width="400" height="250">
     </div>
-    <h2>perbaikan Smartphone</h2>
+    <h2>Perbaikan Smartphone</h2>
          <p>
     Kami memahami bahwa smartphone sekarang ini menjadi suatu kebutuhan yang sangat penting, karena dengan smartphone tersebut kita dapat mengetahui info terbaru, bisa terhubung dengan orang-orang jauh dan juga dengan partner kerja kita.dan kami sangat memahami jika tiba-tiba smartphone anda tidak berfungsi dengan normal atau rusak dan tidak bisa di gunakan sama sekali, tentunya anda sangat akan membutuhkan jasa perbaikan smartphone yang bisa di handalkan, Jadi tunggu apalagi segera bawa smartphone anda ke DD Mobile Services, karena kami telah memiliki tehnisi yang sudah terlatih untuk memperbaiki smartphone anda sehingga anda bisa menggunakan smartphone anda untuk beraktivitas kembali. </p>
     <h2>Bawa smartphone anda segera</h2>
     <p>
-    kami bisa memperbaiki berbagai jenis smartphone dan modelny, dan kami dapat di percaya untuk memperbaiki berbagai kerusakan smartphone anda seperti kerusakan perangakat keras seperti ganti lcd,
+    Kami bisa memperbaiki berbagai jenis smartphone dan modelny, dan kami dapat di percaya untuk memperbaiki berbagai kerusakan smartphone anda seperti kerusakan perangakat keras seperti ganti lcd,
     tidak ada sinyal, baterai drop, simcard
     tidak terbaca, camera, dan lain lain. 
     Kami juga melayani perbaikan perangkat lunak seperti, install ulang sistem operasi dan upgrade, install applikasi, isi lagu, isi video dan lain lain. 
@@ -48,9 +48,10 @@
 
 <footer>
     <div id="footerlabel">
-    Services dan jual beli Online mudah, murah, cepet dan terpercaya.
+    Services dan jual beli Hp Online mudah, murah, cepet dan terpercaya.
     <br>
-   Contact us: <a href="mailto:diyahdiox@gmail.com">Diyahdiox@gmail.com"</a> 
+   Kontak Hp:083871487148
+                          
                                             
         <br>
     Copyright DD Mobile Services&copy;
