--- a/Rondiyah/accessories.html
+++ b/Rondiyah/accessories.html
@@ -10,19 +10,19 @@
 <header>
 <h1>DD Mobile Services&copy</h1>
 		<form action="" method="GET">
-		<label for="search">Search : </label>
-			<input type="search" name="query" id="search" placeholder="Search" autofocus>
+		<label for="search">Cari: </label>
+			<input type="search" name="query" id="search" placeholder="cari" autofocus>
 		</form>
 </header>
 <nav>
 			<ul id="navigation">
 				<li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="usedphone.html">Used Phone</a> </li>
-                <li><a href="newphone.html">New Phone</a></li>
-                <li><a href="Accessories.html" class="main">Accessories</a></li>
-                 <li><a href="topup.html">Top Up</a></li>
-			     <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="services.html">Pelayanan</a></li>
+                <li><a href="usedphone.html">Hp Bekas</a> </li>
+                <li><a href="newphone.html">Hp Baru</a></li>
+                <li><a href="Accessories.html" class="main">Aksesoris</a></li>
+                 <li><a href="topup.html">Isi ulang</a></li>
+			     <li><a href="contactus.html">Kontak Kami</a></li>
     </ul>
     </nav>
 
@@ -109,10 +109,10 @@
 
 <footer>
     <div id="footerlabel">
-    Services dan jual beli Online mudah, murah, cepet dan terpercaya.
+    Services dan jual beli Hp Online mudah, murah, cepet dan terpercaya.
     <br>
-   Contact us: <a href="">Diyahdiox@gmail.com"</a> 
-                                            
+     Kontak Hp:083871487148
+                              
         <br>
     Copyright DD Mobile Services&copy;
         </div></footer>
