--- a/Titin/stadium.html
+++ b/Titin/stadium.html
@@ -22,7 +22,7 @@
               <td><a href="Car%20accessories.html">AKSESORIS MOBIL</a><br></td>
               <td><a href="Foodball%20clup%20jerseys.html"><i>NEW JERSEYS </i></a></td> 
               <td><a href="stadium.html"><i>STADIUM</i></a><br></td>
-              <td><a href="informasi.html">CARA PEMESANAN</a></td> 
+              <td><a href="informasi.html">PEMESANAN</a></td> 
          </tr>
               </table>
               <Table border="1" width="100%" height="5%" align="top" cellspacing="2" cellpadding="3" >
