--- a/Titin/Car accessories.html
+++ b/Titin/Car accessories.html
@@ -21,7 +21,7 @@
               <td><a href="Car%20accessories.html">AKSESORIS MOBIL</a><br></td>
               <td><a href="Foodball%20clup%20jerseys.html"><i>NEW JERSEYS </i></a></td> 
               <td><a href="stadium.html"><i>STADIUM</i></a><br></td>
-              <td><a href="informasi.html">CARA PEMESANAN</a></td> 
+              <td><a href="informasi.html"> PEMESANAN</a></td> 
          </tr>
               </table>
               
