--- a/Titin/Football clup jerseys.html
+++ b/Titin/Football clup jerseys.html
@@ -20,11 +20,11 @@
           <tr align="centre" height="5">
               <td><a href="Indexcss.html"class="a-disebar">BERANDA</a>
               </td> 
-              <td><a href="Foodball%20accessories.html"><i>SOCCER ACCESSORIES</i></a></td>
+              <td><a href="Football%20accessories.html"><i>SOCCER ACCESSORIES</i></a></td>
               <td><a href="Car%20accessories.html">AKSESORIS MOBIL</a><br></td>
-              <td><a href="Foodball%20clup%20jerseys.html"><i>NEW JERSEYS </i></a></td> 
+              <td><a href="Football%20clup%20jerseys.html"><i>NEW JERSEYS </i></a></td> 
               <td><a href="stadium.html"><i>STADIUM</i></a><br></td>
-              <td><a href="informasi.html">CARA PEMESANAN</a></td> 
+              <td><a href="informasi.html">PEMESANAN</a></td> 
          </tr>
      </table>
              <Table border="1" width="100%" height="5%" align="top" cellspacing="2" cellpadding="3" >
