--- a/Jamilah/Hubungi Kami.html
+++ b/Jamilah/Hubungi Kami.html
@@ -17,7 +17,7 @@
                                 <td id="td-header-title">
                                     MEELA TAILOR
                                     <br>
-                                    <div id="div-header-desc">portal khusus (model jahitan) baju</div>
+                                    <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
                             <tr> 
@@ -48,7 +48,7 @@
                         <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
                     </td>
                     <td id="td-body-content">
-                        <div class="div-content-title">contoh menjahit baju kurung/muslim</div>
+                        <div class="div-content-title">Contoh menjahit baju gamis/syar'i</div>
                         
                         <br>
                         <hr>
