--- a/Jamilah/Jasa menjahit baju.html
+++ b/Jamilah/Jasa menjahit baju.html
@@ -18,7 +18,7 @@
                                 <td id="td-header-title">
                                     MEELA TAILOR
                                     <br>
-                                    <div id="div-header-desc">portal khusus (model jahitan) baju</div>
+                                    <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
                             <tr> 
@@ -49,10 +49,10 @@
                         <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
                     </td>
                     <td id="td-body-content">
-                        <div class="div-content-title">contoh menjahit baju kurung/muslim</div>
+                        <div class="div-content-title">Contoh menjahit baju gamis/syar'i</div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
                             <br><br> Selamat datang di meela tailor,kami menerima jasa menjahit baju wanita dan anak-anak bisa dalam jumlah banyak dan satuan
-                            ini salah satu contoh membuat baju kurung/muslim yang simlple
+                            ini salah satu contoh membuat baju gamis/syar'i yang simlple
                             <br>
                             Baca selengkapnya di <a href="Meela%20Tailor.html">sini</a>.
                         </div>
@@ -69,11 +69,11 @@
                             
                             Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing<br>
                             <ol>
-                            <li>seragam sekolah Rp.100.000,</li>
-                            <li>kebaya Rp.100.000,.</li>
-                            <li>baju kurung/syar'i Rp.100.000,.</li></ol>
-                            <br><br>
-                            Kami juga melayani free pengiriman satu Kecamatan
+                            <li>Seragam sekolah Rp.100.000,</li>
+                            <li>Kebaya Rp.100.000,.</li>
+                            <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
+                            <br>
+                            Free pengiriman satu Kecamatan
                             ,salam santun Meela Tailor
                             Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
                         </div>
@@ -87,7 +87,7 @@
                 <tr>
                     <td class="td-invisible"></td>
                     <td id="td-footer">
-                        Copyright © 2017 Meela Tailor
+                        Copyright © 2017 Meela Tailor 
                         <br>
                         
                         <br>
