--- a/Jamilah/Meela Tailor.html
+++ b/Jamilah/Meela Tailor.html
@@ -16,7 +16,7 @@
                             <tr>
                                 <td id="td-header-title">
                                     MEELA TAILOR
-                                    <div id="div-header-desc">portal khusus (model jahitan) baju</div>
+                                    <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
                             <tr> 
@@ -50,7 +50,7 @@
                         <div class="div-content-title"><br>Meela Tailor<br></div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
                             Jasa menjahit baju meela tailor.
-                            sudah berpengalaman lebih dari 5 tahun,ini salah satu contoh hasil karya kami
+                            sudah berpengalaman lebih dari 5 tahun,ini salah satu contoh hasil jahitan kami
                         </div>
                         <br>
                         <hr>
@@ -63,13 +63,12 @@
                         <div class="div-content-title">Jasa Menjahit Baju</div>
                         <div class="div-content-brief">
                             Selamat datang di meela tailor,kami menerima jasa menjahit baju wanita dan anak-anak bisa dalam jumlah banyak dan satuan
-                            Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing<br>
+                            Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing
                             <ol>
-                            <li>seragam sekolah Rp.100.000,</li>
-                            <li>kebaya Rp.100.000,.</li>
-                            <li>baju kurung/syar'i Rp.100.000,.</li></ol>
-                            <br><br>
-                            Kami juga melayani free pengiriman satu Kecamatan
+                            <li>Seragam sekolah Rp.100.000,</li>
+                            <li>Kebaya Rp.100.000,.</li>
+                            <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
+                            Free pengiriman satu Kecamatan
                             ,salam santun Meela Tailor
                             Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
                         </div>
