--- a/Jamilah/Tentang.html
+++ b/Jamilah/Tentang.html
@@ -16,7 +16,7 @@
                             <tr>
                                 <td id="td-header-title">
                                     MEELA TAILOR
-                                    <div id="div-header-desc">portal khusus (model jahitan) baju</div>
+                                    <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
                             <tr> 
@@ -64,11 +64,11 @@
                         <div class="div-content-brief">
                             Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing<br>
                             <ol>
-                            <li>seragam sekolah Rp.100.000,</li>
-                            <li>kebaya Rp.100.000,.</li>
-                            <li>baju kurung/syar'i Rp.100.000,.</li></ol>
+                            <li>Seragam sekolah Rp.100.000,</li>
+                            <li>Kebaya Rp.100.000,.</li>
+                            <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
                             <br><br>
-                            Kami juga melayani free pengiriman satu Kecamatan
+                            Free pengiriman satu Kecamatan
                             ,salam santun Meela Tailor
                             Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
                         </div>
@@ -83,7 +83,6 @@
                     <td class="td-invisible"></td>
                     <td id="td-footer">
                         Copyright © 2017 Meela Tailor
-                        <br>
                         
                         <br>
                     </td>
