--- a/Jamilah/index.html
+++ b/Jamilah/index.html
@@ -16,7 +16,7 @@
                             <tr>
                                 <td id="td-header-title">
                                     MEELA TAILOR
-                                    <div id="div-header-desc">portal khusus (model jahitan) baju</div>
+                                    <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
                             <tr> 
@@ -25,8 +25,7 @@
                                         <li class="li-header-nav"><a href="Tentang.html" class="a-header-nav">Tentang</a></li>
                                         <li class="li-header-nav"><a href="index.html" class="a-header-nav">Beranda</a><li>
                                     </ul>
-                                </td>                                   
-
+                                </td>           
                             </tr>
                         </table>                
                     </td>
@@ -47,12 +46,12 @@
                         <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
                     </td>
                     <td id="td-body-content">
-                        <div class="div-content-title">contoh menjahit baju kurung/muslim</div>
+                        <div class="div-content-title">Contoh menjahit baju gamis/syar'i</div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
                             Selamat datang di jasa menjahit baju meela tailor.
                             Kami memberikan pelayanan dengan harga manis model dinamis
                             <br>
-                            ini salah satu contoh membuat baju kurung/muslim yang simlple
+                            ini salah satu contoh membuat baju gamis/syar'i yang simlple
                             <br>
                             Baca selengkapnya di <a href="Meela%20Tailor.html">sini</a>.
                         </div>
@@ -68,11 +67,10 @@
                         <div class="div-content-brief">
                              Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing <br>
                             <ol>
-                            <li>baju gamis Rp.100.000,.</li>
-                            <li>seragam sekolah Rp.100.000,</li>
-                            <li>kebaya Rp.100.000,.</li>
-                            <li>baju kurung/syar'i Rp.100.000,.</li></ol>
-                            Kami juga melayani free pengiriman satu Kecamatan
+                            <li>Seragam sekolah Rp.100.000,</li>
+                            <li>Kebaya Rp.100.000,.</li>
+                            <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
+                            Free pengiriman satu Kecamatan
                             ,salam santun Meela Tailor
                             Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
                         </div>
