--- a/Lylyez/Project_01 Alex/contact.html
+++ b/Lylyez/Project_01 Alex/contact.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Resep Makan - Hubungi Kami</title>
     </head>
-    <body>
+    <body><table border="2" width="50%"> 
         <div id="div-header">
             <table id="table-header">
                 <tr>
