--- a/Lylyez/Daftar.html
+++ b/Lylyez/Daftar.html
@@ -47,102 +47,124 @@
         </table>
          <div class="content">
             <td id="td-body-content">    
-                <div class="div-content-title">DAFTAR PERSEWAAN</div>
+                <div class="div-content-title">DAFTAR HARGA PERSEWAAN</div>
                 <div class="div-content-brief">
-                Bagi Anda yang Ingin Menyampaikan sesuatu atau pertanyaan<br>Anda dapat manghubungi kami di :<br><br>
+                Berikut Daftar Harga persewaan di ArmadaSoundsystem :
                 <table border="1">
                     <tr>
+                        <td>No</td>
+                        <td>Nama</td>
+                        <td>Satuan</td>
+                        <td>Harga</td>
+                        <td>Keterangan</td>
+                    </tr>
+                    <tr>
                         <td>1.</td>
-                        <td>Telf</td>
-                        <td>: 0823-3756-7795</td>
+                        <td>Kursi non lipat</td>
+                        <td></td>
+                        <td>@Rp.2500,00'-</td>
+                        <td>Keterangan</td>
                     </tr>
                     <tr>
                         <td>2.</td>
-                        <td>SMS/WA</td>
-                        <td>: 0857-7427-3245</td>
+                        <td>Kursi non lipat beserta covernya</td>
+                        <td>Satuan</td>
+                        <td>@Rp. 5000,00-,</td>
+                        <td>Keterangan</td>
                     </tr>
                     <tr>
                         <td>3.</td>
-                        <td>BBM</td>
-                        <td>: 53179D0</td>
+                        <td>Meja Persegi panjang</td>
+                        <td>Satuan</td>
+                        <td>Harga</td>
+                        <td>Keterangan</td>
                     </tr>
                     <tr>
                         <td>4.</td>
-                        <td>Email</td>
-                        <td>: threelyez12@gmail.com</td>
-                    <tr>
-                    <td>
+                        <td>Meja Prasmanan</td>
+                        <td>Satuan</td>
+                        <td>Harga</td>
+                        <td>Keterangan</td>
+                    </tr>
                     <tr>
                         <td>5.</td>
-                        <td>Facebook</td>
-                        <td>: <a href="https://www.facebook.com/armada.gadingrejo?fref=ts">armada.gadingrejo</a></td>
+                        <td>Tenda</td>
+                        <td>Set</td>
+                        <td>Rp.1.500.000,00-,</td>
+                        <td>Keterangan</td>
                     </tr>
                     <tr>
                         <td>6.</td>
-                        <td>Alamat</td>
-                        <td>: Jalan Hasanudin 69 Gadingrejo - Umbulsari<br>Jember - Jawatimur 68166<br><br></td>
+                        <td>Karpet gelar jalan</td>
+                        <td>Meter</td>
+                        <td>@Rp.7000,00-,</td>
+                        <td>Keterangan</td>
+                    <tr>   
+                        <td>7.</td>
+                        <td>Soundsystem</td>
+                        <td>Paket</td>
+                        <td>Rp.500.000,00-,</td>
+                        <td>Semalam suntuk</td>
+                    <tr>
+                        <td>8.</td>
+                        <td>Gerabah</td>
+                        <td>paket</td>
+                        <td>Rp.400.000,00-,</td>
+                        <td>Keterangan</td>
+                    </tr>
+                    <tr>
+                        <td>9.</td>
+                        <td>Jedi/Wajan Jenang</td>
+                        <td>Satuan</td>
+                        <td>Rp.250.000,00-,</td>
+                        <td>Jika dihantarkan maka nambah biaya Rp50.000,00-,</td>
+                    </tr>
+                    <tr>
+                        <td>10.</td>
+                        <td>Panggung tanpa Karpet</td>
+                        <td>meter</td>
+                        <td>Rp.25.000.000-,</td>
+                        <td>Jika pesen sepaket Rp.350.000.00-,</td>
+                    </tr>
+                    <tr>
+                        <td>11.</td>
+                        <td>Dekorasi Lengkap</td>
+                        <td>Biasa, standart, Mewah</td>
+                        <td>Rp.3.000.000,00-,</td>
+                        <td>Untuk dekorasi ada kelasnya, Rp.3.000.000 merupakan standart</td>
+                    </tr>
+                    <tr>
+                        <td>12.</td>
+                        <td>Tenda Komplit,meja,kursi,soundsystem,gerabah non karpet jalan</td>
+                        <td>-</td>
+                        <td>Rp.4.000.000,00-,</td>
+                        <td>2 hari 2 malam</td>
                     </tr>
                     </table>
-               Untuk Pengiriman sms/wa dan email, Mohon sertakan data diri Anda supaya kami dapat menindak lanjuti keperluan Anda.<br>Terima kasih sudah menghubungi kami<br><br><br>
-                    ^^-ARMADA SOUNDSYSTEM-^^<br><br><br><br><br><br><br><br><br><br><br>
-               </div>
-                  </td>
-                   <td class="td-invisible"></td>
-                  </tr>
-                </table>
+                </div>
+                    <table>                   
+                        <tr>
+                          <td>
+                            <img src="Image/jpeg/kursisinglecover.jpg"/width="200px">
+                            </td>
+                          <td></td>
+                          <td>
+                          <img src="Image/jpeg/dekorasi_tradisional.jpg"/width="200px"></td>
+                        <td>
+                          <img src="Image/jpeg/gerabah.jpg"/width="200px">
+                        </td>
+                        <td>
+                            <img src="Image/jpeg/jedi.jpg"/width="120px">
+                        </td>
+                        <td></td>
+                     </tr>
+                 </table>              
+            </div>                            
             </div>
             <div class="footer">
-        <p class="copy">@CopyRight2017 By: Armada Soundsystem<br>
+               <p class="copy">@CopyRight2017 By: Armada Soundsystem<br>
                  Semangat Belajar tanpa henti dan selalu mencari tahu - Merdeka!</p>
-        </div> 
-        </body>
+            </div>
+        </div>
     </body>
-</html> <div id="div-body">
-         <table id="table-body">
-            <tr>
-             <td class="td-invisible"></td>
-              <td id="td-body-content">
-               <div class="div-content-table">
-                <ol>
-                    <li>
-                  <img src="Image/jpeg/dekorasi_tradisional.jpg"/width="200px"></li>
-                    <li>
-                   <img src="Image/jpg/kursi_mejaputih.png"/width="200px">
-                    </li>
-                    <li></li>
-                   </ol>
-                
-               </div>
-              </td>
-            </tr>
-         </table>
-       </div>
-       <div id="div-body">
-          <table border="1">
-             <tr>
-               <td>
-                  <img src="Image/lain-lain/pikep.jpg"/width="200px">
-               </td>
-               <td>
-               </td>
-               <td>
-                 <img src="Image/png/dekorasi_image2.png"/width="250px">
-               </td>
-               <td>
-                 <img src="Image/tenda/ar%20tenda%20kecil.jpg">  
-               </td>
-               <td>
-                 <img src
-               </td>
-            </tr>
-        </table>
-     </div> 
-     <div class="footer">   
-            <p class="copy">@Copyright2017 By: Armada Soundsystem<br>
-                Semangat Belajar tanpa henti dan selalu mencari tahu-Merdeka!</p>
-         </td></td>
-        </tr>
-    </table>
-    </div> 
-  </body>   
 </html>
