--- a/Lylyez/index.html
+++ b/Lylyez/index.html
@@ -65,15 +65,20 @@
            <table class="img-bawah">
               <tr>
                 <td>
-                   <img src="Image/jpg/kursiputih_mejabiru.png"/width="202px"><br>
-                    Untuk Harga Meja kursi set di <a href="Daftar.html">sini</a>
+                   <img src="Image/jpeg/terob.jpg"/width="180px"><br>
+                    Harga sewa lihat di <a href="Daftar.html">sini</a>
                 </td>
                 <td>
-                    <img src="Image/lain-lain/pikep.jpg"/width="150px">
-                     Transportasi
+                    <img src="Image/lain-lain/pikep.jpg"/width="180px"><br>
+                     Harga sewa, lihat di <a href="Daftar.html">sini</a>
                 </td>
                 <td>
-                   <img src="Image/jpeg/pasangterob.jpg"/width="210">
+                   <img src="Image/jpeg/arsoundsys.jpg"/width="180px"><br>
+                    Harga sewa, lihat di <a href="Daftar.html">sini</a>
+                </td>
+                <td>
+                  <img src="Image/jpeg/kursinocover.jpg"/width="180px"><br>
+                  Harga sewa, lihat di <a href="Daftar.html">sini</a>  
                 </td>
              </tr>
          </table>
