--- a/Lylyez/Kontak.html
+++ b/Lylyez/Kontak.html
@@ -81,10 +81,11 @@
                         <td>6.</td>
                         <td>Alamat</td>
                         <td>: Jalan Hasanudin 69 Gadingrejo - Umbulsari<br>Jember - Jawatimur 68166<br><br></td>
-                    </tr>
-                    </table>
+                        </tr></table>
+                    
                Untuk Pengiriman sms/wa dan email, Mohon sertakan data diri Anda supaya kami dapat menindak lanjuti keperluan Anda.<br>Terima kasih sudah menghubungi kami<br><br><br>
-                    ^^-ARMADA SOUNDSYSTEM-^^<br><br><br><br><br><br><br><br><br><br><br>
+                    ^^-ARMADA SOUNDSYSTEM-^^<br><br><br><br>                
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7897.26272192988!2d113.4279148!3d-8.239773!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd688ffef8c1399%3A0xcd6b1916e6c4ecd1!2sARMADA+SOUNDSYSTEM!5e0!3m2!1sid!2ssg!4v1489163754542" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br><br><br><br> 
                </div>
                   </td>
                    <td class="td-invisible"></td>
