Meela Tailor html
Meela Tailor html

--- a/Jamilah/Meela Tailor.html
+++ b/Jamilah/Meela Tailor.html
@@ -15,13 +15,13 @@
                         <table id="table-header-nav">
                             <tr>
                                 <td id="td-header-title">
-                                    MEELA TAILOR
+                                    <marquee>MEELA TAILOR</marquee>
                                     <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
                             <tr> 
                                 <td id="td-header-nav">
-                                    <ul id="ul-header-nav"><br>
+                                    <ul id="ul-header-nav">
                                         <li class="li-header-nav"><a href="Tentang.html" class="a-header-nav">Tentang</a></li>
                                         <li class="li-header-nav"><a href="index.html" class="a-header-nav">Beranda</a></li>
                                     </ul>
@@ -49,27 +49,25 @@
                     <td id="td-body-content">
                         <div class="div-content-title"><br>Meela Tailor<br></div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
-                            Jasa menjahit baju meela tailor.
-                            sudah berpengalaman lebih dari 5 tahun,ini salah satu contoh hasil jahitan kami
+                        Meela Tailor sudah berkecimpung dan berpengalaman di dunia jahit menjahit selama 10 tahun setia melayani sahabat di mana saja. Kami juga melayani pengiriman gratis  satu wilayah Kecamatan Wanareja untuk info lebih lanjut silahkan hubungi kami di no  08122652646
                         </div>
                         <br>
                         <hr>
                         <div class="div-content-title">Menerima Pesanan</div>
                         <div class="div-content-brief">
-                            Kami menerima jahitan  untuk acara keluarga,majlis taklim, panitia,seragam sekolah,gamis,kebaya,dan syar'i<p>Catatan: Pembayaran di muka(DP)minimal 30% dari total harga jahit,dibayarkan saat penyerahan bahan <p></p>dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
+                            Kami menerima jahitan : <ul><br>
+                            <li>Majlis Taklim</li> <li>Panitia</li><li>Seragam Sekolah</li><li>Gamis</li><li>Kebaya</li><li> Syar'i</li></ul>Catatan : Pembayaran di muka(DP)minimal 30% dari total harga jahit dibayarkan saat penyerahan bahan dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
                         </div>
                         <br>
                         <hr>
                         <div class="div-content-title">Jasa Menjahit Baju</div>
                         <div class="div-content-brief">
-                            Selamat datang di meela tailor,kami menerima jasa menjahit baju wanita dan anak-anak bisa dalam jumlah banyak dan satuan
-                            Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing
+                            Berikut ini list harga menjahit kamid belum termasuk ongkir dan furing
                             <ol>
-                            <li>Seragam sekolah Rp.100.000,</li>
+                            <li>Seragam sekolah Rp.100.000,.</li>
                             <li>Kebaya Rp.100.000,.</li>
                             <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
-                            Free pengiriman satu Kecamatan
-                            ,salam santun Meela Tailor
+                             Kami juga bisa datang mengambil ukuran baju ke rumah sahabat minimal 5 ukuran.<br> santun Meela Tailor
                             Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
                         </div>
                     </td>
