--- a/Jamilah/index.html
+++ b/Jamilah/index.html
@@ -15,7 +15,7 @@
                         <table id="table-header-nav">
                             <tr>
                                 <td id="td-header-title">
-                                    MEELA TAILOR
+                                    <marquee> MEELA TAILOR</marquee>
                                     <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
@@ -35,7 +35,7 @@
         </div>
         <div id="div-body">
             <table id="table-body">
-                <tr>
+                <tr><br>
                     <td class="td-invisible"></td>
                     <td id="td-body-sidebar">
                         <ul id="ul-sidebar"><br>
@@ -44,34 +44,35 @@
                             <li class="li-sidebar"><a href="Hubungi Kami.html" class="a-sidebar">Hubungi Kami</a></li>
                         </ul>                       
                         <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
-                    </td>
+                    </td><br>
                     <td id="td-body-content">
                         <div class="div-content-title">Contoh menjahit baju gamis/syar'i</div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
                             Selamat datang di jasa menjahit baju meela tailor.
                             Kami memberikan pelayanan dengan harga manis model dinamis
                             <br>
-                            ini salah satu contoh membuat baju gamis/syar'i yang simlple
+                            Ini salah satu contoh membuat baju gamis/syar'i yang simlple
                             <br>
-                            Baca selengkapnya di <a href="Meela%20Tailor.html">sini</a>.
+                             Baca pengalaman kami di <a href="Meela%20Tailor.html">sini</a>.
                         </div>
                         <br>
                         <hr>
                         <div class="div-content-title">Menerima Pesanan</div>
                         <div class="div-content-brief">
-                            Kami menerima jahitan  untuk acara keluarga,majlis taklim, panitia,seragam sekolah,gamis,kebaya,dan syar'i<p>Catatan: Pembayaran di muka(DP)minimal 30% dari total harga jahit,dibayarkan saat penyerahan bahan <p></p>dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
+                            Kami menerima jahitan :<br><ul>
+                            <li>Majlis Taklim</li> <li>Panitia</li><li>Seragam Sekolah</li><li>Gamis</li><li>Kebaya</li><li> Syar'i</li></ul>Catatan : Pembayaran di muka(DP)minimal 30% dari total harga jahit dibayarkan saat penyerahan bahan dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
                         </div>
                         <br>
                         <hr>
                         <div class="div-content-title">Jasa Menjahit Baju</div>
                         <div class="div-content-brief">
-                             Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing <br>
+                             Berikut ini list harga menjahit kami belum termasuk ongkir dan furing <br>
                             <ol>
-                            <li>Seragam sekolah Rp.100.000,</li>
+                            <li>Seragam sekolah Rp.100.000,.</li>
                             <li>Kebaya Rp.100.000,.</li>
                             <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
-                            Free pengiriman satu Kecamatan
-                            ,salam santun Meela Tailor
+                            Kami juga bisa datang mengambil ukuran baju ke rumah sahabat minimal 5 ukuran .<br>
+                            Salam santun Meela Tailor
                             Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
                         </div>
                     </td>
