--- a/Jamilah/Jasa menjahit baju.html
+++ b/Jamilah/Jasa menjahit baju.html
@@ -16,7 +16,7 @@
                         <table id="table-header-nav">
                             <tr>
                                 <td id="td-header-title">
-                                    MEELA TAILOR
+                                    <marquee>MEELA TAILOR</marquee>
                                     <br>
                                     <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
@@ -24,7 +24,7 @@
                             <tr> 
                                 <td id="td-header-nav">
                                     <ul id="ul-header-nav">
-                                        <li class="li-header-nav"><a href="about.html" class="a-header-nav">Tentang</a></li>
+                                        <li class="li-header-nav"><a href="Tentang.html" class="a-header-nav">Tentang</a></li>
                                         <li class="li-header-nav"><a href="index.html" class="a-header-nav">Beranda</a></li>
                                     </ul>
                                 </td>                                   
@@ -36,7 +36,7 @@
                 </tr>
             </table>
         </div>
-        <div id="div-body">
+        <div id="div-body"><br>
             <table id="table-body">
                 <tr>
                     <td class="td-invisible"></td>
@@ -48,33 +48,35 @@
                         </ul>
                         <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
                     </td>
-                    <td id="td-body-content">
+                    <td id="td-body-content"><br>
                         <div class="div-content-title">Contoh menjahit baju gamis/syar'i</div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
-                            <br><br> Selamat datang di meela tailor,kami menerima jasa menjahit baju wanita dan anak-anak bisa dalam jumlah banyak dan satuan
+                            <br><br> Selamat datang di meela tailor. Kami menerima jasa menjahit baju wanita dan anak-anak bisa dalam jumlah banyak dan satuan
                             ini salah satu contoh membuat baju gamis/syar'i yang simlple
                             <br>
-                            Baca selengkapnya di <a href="Meela%20Tailor.html">sini</a>.
+                            Baca pengalaman kami di <a href="Meela%20Tailor.html">sini</a>.
                         </div>
-                        <br>
                         <hr>
                         <div class="div-content-title">Menerima Pesanan</div>
                         <div class="div-content-brief">
-                            Kami menerima jahitan  untuk acara keluarga,majlis taklim, panitia,seragam sekolah,gamis,kebaya,dan syar'i<p>Catatan: Pembayaran di muka(DP)minimal 30% dari total harga jahit,dibayarkan saat penyerahan bahan <p></p>dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
+                            Kami menerima jahitan :
+                            <ul>
+                            <li>Majlis Taklim</li> <li>Panitia</li><li>Seragam Sekolah</li><li>Gamis</li><li>Kebaya</li><li> Syar'i</li></ul>
+                            Catatan : Pembayaran di muka(DP)minimal 30% dari total harga jahit dibayarkan saat penyerahan bahan dapat menghubungi kami di<a  href="Hubungi%20Kami.html">sini</a>
                         </div>
                         <br>
                         <hr>
                         <div class="div-content-title">Jasa Menjahit Baju</div>
                         <div class="div-content-brief">
                             
-                            Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing<br>
+                            Berikut ini list harga menjahit kami Belum termasuk ongkir dan furing<br>
                             <ol>
-                            <li>Seragam sekolah Rp.100.000,</li>
+                            <li>Seragam sekolah Rp.100.000,.</li>
                             <li>Kebaya Rp.100.000,.</li>
                             <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
                             <br>
-                            Free pengiriman satu Kecamatan
-                            ,salam santun Meela Tailor
+                            Kami juga bisa datang mengambil ukuran baju ke rumah sahabat minimal 5 ukuran.<br>
+                            Salam santun Meela Tailor
                             Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
                         </div>
                     </td>
