--- a/Jamilah/Tentang.html
+++ b/Jamilah/Tentang.html
@@ -15,13 +15,13 @@
                         <table id="table-header-nav">
                             <tr>
                                 <td id="td-header-title">
-                                    MEELA TAILOR
+                                    <marquee>MEELA TAILOR</marquee>
                                     <div id="div-header-desc">Portal khusus (model jahitan) baju</div>
                                 </td>
                             </tr>
                             <tr> 
                                 <td id="td-header-nav">
-                                    <ul id="ul-header-nav"><br>
+                                    <ul id="ul-header-nav">
                                         <li class="li-header-nav"><a href="Tentang.html" class="a-header-nav">Tentang</a></li>
                                         <li class="li-header-nav"><a href="index.html" class="a-header-nav">Beranda</a></li>
                                     </ul>
@@ -46,30 +46,31 @@
                         </ul>
                         <img src="image/IMG_0236.JPG" id="img-sidebar-ads"/>
                     </td>
-                    <td id="td-body-content">
+                    <td id="td-body-content"><br>
                         <div class="div-content-title"><br>Meela Tailor<br></div>
                         <div class="div-content-brief"><img src="wahyu1.jpg" class="img-content"/>
-                            Jasa menjahit baju meela tailor 
-                            sudah  berpengalaman lebih dari 5 tahun,ini salah satu contoh hasil jahitan kami
+                            Jasa menjahit baju meela tailor sudah berkecimpung didunia jahit menjahit selama 10 tahun 
+                            setia melayani sahabat di mana saja<br>Kami juga melayani pengiriman gratis satu wilayah Kecamatan Wanareja
                         </div>
                         <br>
                         <hr>
                         <div class="div-content-title">Menerima Pesanan</div>
                         <div class="div-content-brief">
-                            Kami menerima jahitan  untuk acara keluarga,majlis taklim, panitia,seragam sekolah,gamis,kebaya,dan syar'i<p>Catatan: Pembayaran di muka(DP)minimal 30% dari total harga jahit,dibayarkan saat penyerahan bahan <p></p>dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
+                            Kami menerima jahitan :
+                            <ul>
+                            <li>Majlis taklim</li> <li>Panitia</li><li>Seragam Sekolah</li><li>Gamis</li><li>Kebaya</li><li> Syar'i</li></ul>Catatan : Pembayaran di muka(DP)minimal 30% dari total harga jahit dibayarkan saat penyerahan bahan dapat menghubungi kami di <a href="Hubungi%20Kami.html">sini</a>.
                         </div>
                         <br>
                         <hr>
                         <div class="div-content-title">Jasa Menjahit Baju</div>
                         <div class="div-content-brief">
-                            Berikut ini list harga menjahit kami: sudah termasuk ongkir dan furing<br>
+                            Berikut ini list harga menjahit kami sudah termasuk ongkir dan furing<br>
                             <ol>
-                            <li>Seragam sekolah Rp.100.000,</li>
+                            <li>Seragam sekolah Rp.100.000,.</li>
                             <li>Kebaya Rp.100.000,.</li>
                             <li>Baju gamis/syar'i Rp.100.000,.</li></ol>
                             <br><br>
-                            Free pengiriman satu Kecamatan
-                            ,salam santun Meela Tailor
+                            Kami juga bisa datang mengambil ukuran baju ke rumah sahabat minimal 5 ukuran<br> Salam santun Meela Tailor
                             Baca selengkapnya di <a href="Jasa menjahit baju.html">sini</a>.
                         </div>
                     </td>
